<resources>
    <string name="app_name">Frusto</string>
    <string name="app_full_name">User Frustration and Time Lost</string>

    <string name="hint_participant_name">Enter Your Name</string>
    <string name="text_start_session">Start Session</string>

    <string name="text_instructions">Instructions</string>

    <string name="text_report_incident">Report Frustrating Incident</string>
    <string name="text_end_session">End Session</string>

    <string name="text_part_1">Part 1</string>
    <string name="text_part_1_question_1">
        1. How important was this task? (On a scale of 1 to 5, 1 - Least important and 5 - Most important)
    </string>
    <string name="text_part_1_question_2">
        2. How frustrating was this task? (On a scale of 1 to 5, 1 - Least frustrating and 5 - Most frustrating)
    </string>

    <string name="text_part_2">Part 2</string>
    <string name="text_part_2_caption">
        Record your responses for the following question by pressing the button below.
    </string>
    <string name="text_part_2_question_1">
        Q1. What software or program did the problem occur in? In the problem was the computer system?
    </string>
    <string name="text_part_2_question_2">
       Q2. Can you briefly explain what happened and how it affected you?
    </string>
    <string name="text_part_2_question_3">
       Q3. How often did this issue happen?
    </string>
    <string name="text_part_2_question_4">
        Q4. Were you able to continue to work despite this issue?
    </string>
    <string name="text_record">Record</string>

    <string-array name="user_ratings">
        <item>Scale of 1 – 5</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="text_thank_you">Thank you for participating in our study. A researcher will reach out to you for your compensation.</string>

    <string name="button_start_over">Start Over</string>

</resources>
