<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SurveyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_large"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_full_name" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_medium">

            <TextView
                style="@style/Text.Heading.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_medium"
                android:text="@string/text_part_1" />

            <TextView
                style="@style/Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:text="@string/text_part_1_question_1" />

            <Spinner
                style="@style/Dropdown"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_small"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_medium"
                android:entries="@array/user_ratings" />

            <TextView
                style="@style/Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:text="@string/text_part_1_question_2" />

            <Spinner
                style="@style/Dropdown"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_small"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_medium"
                android:entries="@array/user_ratings" />


            <TextView
                style="@style/Text.Heading.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_medium"
                android:text="@string/text_part_2" />

            <TextView
                style="@style/Text.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_medium"
                android:text="@string/text_part_2_caption"
                android:textStyle="italic" />

            <TextView
                style="@style/Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:text="@string/text_part_2_question_1" />

            <TextView
                style="@style/Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_medium"
                android:text="@string/text_part_2_question_2" />

            <TextView
                style="@style/Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_medium"
                android:text="@string/text_part_2_question_3" />

            <TextView
                style="@style/Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_medium"
                android:text="@string/text_part_2_question_4" />

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:id="@+id/text_recording_time"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_medium"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:paddingLeft="@dimen/spacing_xl"
                android:paddingRight="@dimen/spacing_xl"
                android:text="@string/text_record" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>